packages/dkube-cicd-controller/dkube_cicd_controller-0.4.2-cp37-cp37m-manylinux1_x86_64.whl/dkube_cicd_controller/manifests/tekton-dashboard-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  gateways:
  - dkube/dkube-istio-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /cicd/
    rewrite:
      uri: /
    route:
    - destination:
        host: tekton-dashboard.tekton-pipelines.svc.cluster.local
        port:
          number: 9097
